--- a/content.css
+++ b/content.css
@@ -3,17 +3,17 @@
     position: fixed;
     display: inline-block;
     width: 100%;
-    height: 66px;
+    height: 36px;
     background: rgb(37, 43, 54);
     padding-left: 2px;
     padding-right: 2px;
     bottom: 26px;
     left: 0px;
     white-space: nowrap;
-    line-height: 46px;
+    line-height: 28px;
     vertical-align: middle;
     text-align: center;
-    padding-top: 12px;
+    padding-top: 8px;
 }
 
 .video_alt_control_bar button
@@ -21,20 +21,21 @@
     display: inline-block;
     position: relative;
 
-    width: 42px;
-    height: 42px;
+    width: 36px;
+    height: 18px;
 
-    margin: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
 
     box-sizing: border-box;
     border: solid 1px rgb(255,255,255);
     background: rgb(220,220,220);
     color: rgb(0,0,0);
-    font-size: 16px;
+    font-size: 12px;
 
     text-align: center;
     vertical-align: middle;
-    line-height: 36px;
+    line-height: 18px;
     padding: 0px;
 }
 
